styles/app.css
/* ... */
#parametres > .section-contenu,
#a-propos > .section-contenu {
  padding-inline: 16px;
}

h2:not(:first-child) {
  margin-top: 16px;
}

.un-parametre {
  display: grid;
  grid-template-columns: minmax(auto, 40ch) auto;
  grid-template-rows: 1fr [title] auto [description] var(--description-row) 1fr;
  --description-row: 0;
  column-gap: 16px;
  min-height: 32px;
  padding-block: 8px;
  text-align: left;
  align-items: center;
  container-type: inline-size;
}

.un-parametre.with-description {
  --description-row: auto;
}

.un-parametre.theme > .param {
  grid-template-columns: auto auto auto;
  gap: 8px;
}

.un-parametre + .un-parametre {
  margin-top: 0;
  border-top: 1px solid rgb(var(--outline-variant));
}

.un-parametre .param-nom,
.un-parametre .param-description {
  max-width: 40ch;
}

.param-nom {
  display: block;
  grid-row: title;
  grid-column: 1;
  color: rgb(var(--on-surface));
}

.param-description {
  grid-row: description;
  grid-column: 1;
  color: rgb(var(--on-surface-variant));
}

.param {
  align-self: start;
  display: grid;
  align-items: center;
  justify-content: end;
  min-width: 150px;
  min-height: calc(1.5rem + 1.25rem);
}

.un-parametre > label,
.un-parametre > input,
.un-parametre > input-switch,
.un-parametre > .param {
  grid-row: 1 / -1;
  grid-column: 2;
}

[data-action="check-update"] {
  margin: 0;
}

body:not([data-last-sync]) #parametres [data-last-sync],
body:not([data-last-sync="failure"]) #parametres [data-last-sync="failure"],
body:not([data-last-sync="success"]) #parametres [data-last-sync="success"],
body:not([data-last-sync="loading"]) #parametres [data-last-sync="loading"],
form[name="app-settings"]:not([data-public-profile="true"]) [data-public-profile] {
  display: none;
}

button > load-spinner {
  --size: 24px;
}

[data-sprites-progress]:empty {
  display: none;
}

[data-sprites-progress]:not(:empty)::before {
  content: '(';
}

[data-sprites-progress]:not(:empty)::after {
  content: ')';
}

#parametres[data-online-backup][data-last-sync=success] .success,
#parametres[data-online-backup][data-last-sync=failure] .failure {
  display: inline;
}

label[for="pick-import-file"],
#pick-import-file {
  width: .1px;
	height: .1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}

.un-parametre.theme input[type="radio"] + label {
  margin: 0;
}

input-slider[name="theme-hue"] {
  --block-size: var(--tap-safe-size);
  --inline-size: 80cqw;
  --thumb-width: 14px;
}

input-slider[name="theme-hue"]::part(slider-track) {
  --couleurs: white 0%, black 100%;
  background: var(--gradient, transparent);
  width: 100%;
  height: 100%;
  border: none;
  --border: none;
  outline: var(--border, none);
  border-radius: var(--border-radius);
}

input-slider[name="theme-hue"]::part(slider-thumb) {
  background: transparent;
  border: none;
  border-radius: var(--border-radius);
  box-shadow: inset 0 0 0 2px rgb(var(--on-surface)),
              0 0 0 2px rgb(var(--inverse-on-surface));
  outline-offset: 5px;
}

.current-account-info {
  margin-bottom: -8px;
}

[data-value="current-account"] {
  color: rgb(var(--primary));
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! À PROPOS DU SHINYDEX !!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

.app-icon {
  display: flex;
  width: 120px;
  height: 120px;
  min-height: 120px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 auto;
  border: 1px solid rgb(var(--outline-variant));
}

.app-icon > svg {
  width: 120px;
  height: 120px;
  --background-top: rgb(var(--primary-60));
}

.lien-source {
  color: var(--accent-color);
}

.lien-source .material-icons {
  vertical-align: middle;
  margin-right: 4px;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! PARTAGE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

form[name="user-profile"] {
  display: flex;
  padding: 8px;
  border-radius: var(--border-radius);
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!! SPRITE VIEWER, FILTER MENU & OBFUSCATOR !!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

#sprite-viewer,
#filter-menu,
#top-layer,
#obfuscator {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
}

#sprite-viewer {
  z-index: var(--z-sprite-viewer);
}

#obfuscator {
  z-index: var(--z-obfuscator);
}

#top-layer,
#filter-menu {
  background-color: transparent;
  z-index: var(--z-obfuscator);
}

body[data-section-actuelle~="top-layer"] #top-layer {
  display: contents;
}

#top-layer > * {
  z-index: var(--z-top-layer);
}

/*@media (max-width: 719px) {
  #top-layer > .mobile-centered {
    max-width: calc(100vw - 16px) !important;
    max-height: calc(100vh - 16px) !important;
    min-width: unset !important;
    margin: 8px;
    top: 50vh !important;
    left: 50vw !important;
    transform: translate(-50%, -50%);
  }
}*/



/*
 * Notification
 */

.notification-container {
  width: 100%;
  height: auto;
  max-height: calc(50vh - var(--bottom-bar-height));
  overflow-y: auto;
  position: fixed;
  z-index: var(--z-notification);
  top: calc(100% - var(--bottom-bar-height));
  transform: translateY(calc(-1px * var(--notification-container-height, 0)));
  transition: transform .3s var(--easing-standard);
}

.notification-container.no-animation {
  transition: none;
}

.notification-container > .snackbar:first-child {
  margin-top: 0;
}

.snackbar.signin-prompt {
  grid-template-columns: 1fr var(--dismiss-column);
  grid-template-rows: auto auto;
}

.snackbar.signin-prompt > .snackbar-message {
  grid-row: 2;
  grid-column: 1 / -1;
  padding-top: 0;
  padding-right: 16px;
}

.signin-button-container {
  padding: 8px 0;
  margin-left: -8px;
}


/*
 * Bouton installer
 */

[data-action="install-app"] {
  /*position: absolute;
  bottom: calc(0.5*(56px - 30px));
  right: 20px;*/
  display: none;
}


/*
 * Sign-in with Google
 */

#google-signin-button-container {
  color-scheme: light;
  width: fit-content;
  height: fit-content;
  margin: 8px auto;
  overflow: hidden;
}
/* ... */

